# distributed-file-storage-server

./: .env  .env-local  README.md
distributed-file-storage-server/: Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml  migrate.sh
distributed-file-storage-server/migrations/2024-10-10-112949_create_server/: down.sql  up.sql
distributed-file-storage-server/src/: db.rs  error.rs  helper.rs  main.rs  schema.rs  structs.rs
distributed-file-storage-server/src/endpoints/: download.rs  get_files.rs  mod.rs  upload.rs
