[package]
name = "distributed-file-storage-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread", "macros"] }
diesel = { version = "2.2.4", features = ["postgres", "r2d2", "uuid"] }
actix-multipart = "0.7.2"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
futures = "0.3.31"
dotenv = "0.15.0"
env_logger = "0.11.5"
r2d2 = "0.8.10"
log = "0.4.22"
